prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/import_07.diag.txt
ERROR: newline in a constant
testData/diagnostics/import_07.nut:1:7

import "a
       ^--
" as a


